force-app/main/default/objects/Covenant__c/Covenant__c.object-meta.xml
<CustomObject>
    <label>Covenant</label>
    <nameField>
        <displayFormat>COV-{00000000}</displayFormat>
        <label>Covenant Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Covenants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>