force-app/main/default/objects/Covenant__c/fields/Comparison__c.field-meta.xml
<CustomField>
    <fullName>Comparison__c</fullName>
    <label>Comparison</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>greaterThan</fullName>
            </value>
            <value>
                <fullName>greaterThanOrEqual</fullName>
            </value>
            <value>
                <fullName>lessThan</fullName>
            </value>
            <value>
                <fullName>lessThanOrEqual</fullName>
            </value>
            <value>
                <fullName>na</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>