force-app/main/default/objects/Covenant__c/fields/Covenant_Type__c.field-meta.xml
<CustomField>
    <fullName>Covenant_Type__c</fullName>
    <label>Covenant Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advance Conditions</fullName>
            </value>
            <value>
                <fullName>Annual Review</fullName>
            </value>
            <value>
                <fullName>Arbitration</fullName>
            </value>
            <value>
                <fullName>Autopay</fullName>
            </value>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>CapitalExpenditures</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>CollateralInspection</fullName>
            </value>
            <value>
                <fullName>CreditReportDate(MMDDYYYY)</fullName>
            </value>
            <value>
                <fullName>CropInspection</fullName>
            </value>
            <value>
                <fullName>Cross Collateralize</fullName>
            </value>
            <value>
                <fullName>CurrencyInterestFee</fullName>
            </value>
            <value>
                <fullName>CurrentRatio</fullName>
            </value>
            <value>
                <fullName>CurrentRevolversUsed</fullName>
            </value>
            <value>
                <fullName>DebtServiceCoverageRatio</fullName>
            </value>
            <value>
                <fullName>DebttoEquity</fullName>
            </value>
            <value>
                <fullName>DebttoTangibleNetWorth</fullName>
            </value>
            <value>
                <fullName>EBITDA</fullName>
            </value>
            <value>
                <fullName>FICOScore</fullName>
            </value>
            <value>
                <fullName>Fixed Charge Coverage</fullName>
            </value>
            <value>
                <fullName>Guarantor1EquifaxCreditScore</fullName>
            </value>
            <value>
                <fullName>Guarantor1ExperianCreditScore</fullName>
            </value>
            <value>
                <fullName>Guarantor1TransUnionCreditScore</fullName>
            </value>
            <value>
                <fullName>Guarantor2EquifaxCreditScore</fullName>
            </value>
            <value>
                <fullName>Guarantor2ExperianCreditScore</fullName>
            </value>
            <value>
                <fullName>Guarantor2TransUnionCreditScore</fullName>
            </value>
            <value>
                <fullName>Loans Due to Shareholders</fullName>
            </value>
            <value>
                <fullName>LoantoValue</fullName>
            </value>
            <value>
                <fullName>MaintainingaCheckingAccount</fullName>
            </value>
            <value>
                <fullName>MaintainingaSavingsAccount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>