force-app/main/default/objects/Covenant__c/fields/Current_Value__c.field-meta.xml
<CustomField>
    <fullName>Current_Value__c</fullName>
    <label>Current Value</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>