force-app/main/default/objects/Covenant__c/fields/Expected_Value__c.field-meta.xml
<CustomField>
    <fullName>Expected_Value__c</fullName>
    <label>Expected Value</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>