force-app/main/default/objects/Covenant__c/fields/Monitoring_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Monitoring_Frequency__c</fullName>
    <label>Monitoring Frequency (months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>