force-app/main/default/objects/Covenant__c/fields/Next_Monitoring_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Monitoring_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Monitoring Date</label>
    <type>Date</type>
</CustomField>