force-app/main/default/objects/Covenant__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1540</fullName>
            </value>
            <value>
                <fullName>1541</fullName>
            </value>
            <value>
                <fullName>1542</fullName>
            </value>
            <value>
                <fullName>1543</fullName>
            </value>
            <value>
                <fullName>1544</fullName>
            </value>
            <value>
                <fullName>1545</fullName>
            </value>
            <value>
                <fullName>9361</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>