force-app/main/default/objects/Covenant__c/fields/SW_Covenant_Id__c.field-meta.xml
<CustomField>
    <fullName>SW_Covenant_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SW Covenant Id</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>